--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="shop.js"></script>
 </head>
 <body>
+    <img src="images/h&n_logo.png" title="H & N eShop">
     <h1>Welcome to Hassine & Noomen Shop</h1>
     <fieldset>
         <legend>Create User Account</legend>
