--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hassine & Noomen Shop</title>
+    <title>Hassine & Noomen e-Shop</title>
+    <link rel="icon" href="images/h&n_logo.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="shop.js"></script>
 </head>
 <body>
     <img src="images/h&n_logo.png" title="H & N eShop">
-    <h1>Welcome to Hassine & Noomen Shop</h1>
+    <h1>Welcome to Hassine & Noomen e-Shop</h1>
     <fieldset>
         <legend>Create User Account</legend>
         <input id="login" type="text" placeholder="Enter a username...">
