updated index.html and logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="shop.js"></script>
 </head>
 <body>
-    <img src="images/h&n_logo.png" title="H & N eShop">
+    <img src="images/h&n_logo.png" title="H&N e-Shop">
     <h1>Welcome to Hassine & Noomen e-Shop</h1>
     <fieldset>
         <legend>Create User Account</legend>
