--- a/index.html
+++ b/index.html
@@ -14,15 +14,22 @@
 
     <img src="images/h&n_logo.png" title="H&N e-Shop">
     <h1>Welcome to Hassine & Noomen e-Shop</h1>
+    <div id="message"></div>
     <fieldset>
         <legend>Create User Account</legend>
-        <input id="login" type="text" placeholder="Enter a username...">
+        <label for="firstName">First Name:</label>
+        <input id="firstName" type="text" placeholder="Enter your firstname..."><br>
+        <label for="lastName">Last Name:</label>
+        <input id="lastName" type="text" placeholder="Enter your lastname..."><br>
+        <label for="email">E-mail:</label>
         <input id="email" type="email" placeholder="Enter your email..."><br>
-        <input id="pass" type="password" placeholder="Enter a password...">
-        <input id="confirmPass" type="password" placeholder="Confirm password..." oninput="checkPass()">
+        <label for="pass">Password:</label>
+        <input id="pass" type="password" placeholder="Enter a password..."><br>
+        <label for="confirmPass">Confirm your password:</label>
+        <input id="confirmPass" type="password" placeholder="Confirm password..." oninput="checkPass()"><br>
         <button id="btn" type="button" onclick="createAccount()">Create Account</button>
     </fieldset>
-    <div id="message"></div>
+    
 
 </body>
 </html>
