re-arranged project folders

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hassine & Noomen e-Shop</title>
-    <link rel="icon" href="images/h&n_logo.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/h&n_logo.png">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="shop.js"></script>
+    <script src="js/shop.js"></script>
     
 </head>
 <body>
 
-    <img src="images/h&n_logo.png" title="H&N e-Shop">
+    <a href=index.html><img src="img/h&n_logo.png" title="H&N e-Shop"></a>
     <h1>Welcome to Hassine & Noomen e-Shop</h1>
     <div id="message"></div>
     <fieldset>
