--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="img/h&n_logo.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="js/shop.js"></script>
+    <script src="js/shop.js" async></script>
     
 </head>
 <body>
