--- a/html/shop.html
+++ b/html/shop.html
@@ -36,37 +36,37 @@
                         <h1>Welcome to Hassine & Noomen e-Café Shop</h1>
                         <div id="shop" align="center">
                             <div id="item1" class="items">
-                                <div id="photo"><img src="../img/express.jpg"></div>
+                                <div id="photo"><img src="../img/express.jpg" title="Coffee Express"></div>
                                 <div id="description">Coffee Express</div>
                                 <div id="price">TND 5.520</div>
                                 <button id="add" type="button" onclick="addItem()">Add</button>
                             </div>
                             <div id="item2" class="items">
-                                <div id="photo"><img src="../img/capuccino.jpg"></div>
+                                <div id="photo"><img src="../img/capuccino.jpg" title="Coffee Capuccino"></div>
                                 <div id="description">Coffee Capuccino</div>
                                 <div id="price">TND 6.175</div>
                                 <button id="add" type="button" onclick="addItem()">Add</button>
                             </div>
                             <div id="item3" class="items">
-                                <div id="photo"><img src="../img/water.jpg"></div>
+                                <div id="photo"><img src="../img/water.jpg" title="Miniral Water"></div>
                                 <div id="description">Miniral Water</div>
                                 <div id="price">TND 1.280</div>
                                 <button id="add" type="button" onclick="addItem()">Add</button>
                             </div>
                             <div id="item4" class="items">
-                                <div id="photo"><img src="../img/soda.jpg"></div>
+                                <div id="photo"><img src="../img/soda.jpg" title="Soda"></div>
                                 <div id="description">Soda</div>
                                 <div id="price">TND 3.999</div>
                                 <button id="add" type="button" onclick="addItem()">Add</button>
                             </div>
                             <div id="item5" class="items">
-                                <div id="photo"><img src="../img/cake.jpg"></div>
+                                <div id="photo"><img src="../img/cake.jpg" title="Cake"></div>
                                 <div id="description">Cake</div>
                                 <div id="price">TND 7.825</div>
                                 <button id="add" type="button" onclick="addItem()">Add</button>
                             </div>
                             <div id="item6" class="items">
-                                <div id="photo"><img src="../img/croissant.jpg"></div>
+                                <div id="photo"><img src="../img/croissant.jpg" title="Croissant"></div>
                                 <div id="description">Croissant</div>
                                 <div id="price">TND 6.290</div>
                                 <button id="add" type="button" onclick="addItem()">Add</button>
@@ -82,6 +82,8 @@
             <aside>
                 <div id="user"></div>
                 <div id="cart"></div>
+                <div id="total"></div>
+                <div id="pay"></div>
             </aside>
         </section>
 
