solved add cart and updated project

--- a/html/shop.html
+++ b/html/shop.html
@@ -39,37 +39,37 @@
                                 <div id="photo"><img src="../img/express.jpg" title="Coffee Express"></div>
                                 <div id="description">Coffee Express</div>
                                 <div id="price">TND 5.520</div>
-                                <button id="add" type="button" onclick="addItem()">Add</button>
+                                <button id="add" type="button" onclick="addItem('item1')">Add</button>
                             </div>
                             <div id="item2" class="items">
                                 <div id="photo"><img src="../img/capuccino.jpg" title="Coffee Capuccino"></div>
                                 <div id="description">Coffee Capuccino</div>
                                 <div id="price">TND 6.175</div>
-                                <button id="add" type="button" onclick="addItem()">Add</button>
+                                <button id="add" type="button" onclick="addItem('item2')">Add</button>
                             </div>
                             <div id="item3" class="items">
                                 <div id="photo"><img src="../img/water.jpg" title="Miniral Water"></div>
                                 <div id="description">Miniral Water</div>
                                 <div id="price">TND 1.280</div>
-                                <button id="add" type="button" onclick="addItem()">Add</button>
+                                <button id="add" type="button" onclick="addItem('item3')">Add</button>
                             </div>
                             <div id="item4" class="items">
                                 <div id="photo"><img src="../img/soda.jpg" title="Soda"></div>
                                 <div id="description">Soda</div>
                                 <div id="price">TND 3.999</div>
-                                <button id="add" type="button" onclick="addItem()">Add</button>
+                                <button id="add" type="button" onclick="addItem('item4')">Add</button>
                             </div>
                             <div id="item5" class="items">
                                 <div id="photo"><img src="../img/cake.jpg" title="Cake"></div>
                                 <div id="description">Cake</div>
                                 <div id="price">TND 7.825</div>
-                                <button id="add" type="button" onclick="addItem()">Add</button>
+                                <button id="add" type="button" onclick="addItem('item5')">Add</button>
                             </div>
                             <div id="item6" class="items">
                                 <div id="photo"><img src="../img/croissant.jpg" title="Croissant"></div>
                                 <div id="description">Croissant</div>
                                 <div id="price">TND 6.290</div>
-                                <button id="add" type="button" onclick="addItem()">Add</button>
+                                <button id="add" type="button" onclick="addItem('item6')">Add</button>
                             </div>
                         </div>
                     </div>
