--- a/html/shop.html
+++ b/html/shop.html
@@ -13,7 +13,7 @@
 <body onload="greeting()">
     <div id="bloc_page">
         <header>
-            <div id="logo"><a href=../index.html><img src="../img/h&n_logo.png" title="H&N e-Shop"></a></div>
+            <div id="logo"><a href=../index.html><img src="../img/h&n_logo.png" title="H&N e-Shop" id="logo_img"></a></div>
         </header>
         
         <nav>
