--- a/html/shop.html
+++ b/html/shop.html
@@ -17,23 +17,20 @@
         </header>
         
         <nav>
+            <h1>Welcome to Hassine & Noomen e-Café Shop</h1>
             <ul>
-                <li><a href="#about">About us</a></li>
-                <li><a href="#products">Our products</a></li>
-                <li><a href="#contact">Contact us</a></li>
+                <li><a href="../index.html#about">About us</a></li>
+                <li><a href="../index.html#products">Our products</a></li>
+                <li><a href="../index.html#contact">Contact us</a></li>
             </ul>
         </nav>
 
         <section>
             <article>
-                <div id="about">
-                    <div class="title">About us</div>
-                    <div class="content">H&N Café is an e-Cafe Shop created by Hassine Basla Turki and Noomen Krichen as a pair project during the Cohert-11 class in RBK ReBootKamp.</div>
-                </div>
                 <div id="products">
                     <div class="title">Our products</div>
                     <div class="content">
-                        <h1>Welcome to Hassine & Noomen e-Café Shop</h1>
+                        
                         <div id="shop" align="center">
                             <div id="item1" class="items">
                                 <div id="photo"><img src="../img/express.jpg" title="Coffee Express"></div>
@@ -73,10 +70,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div id="contact">
-                    <div class="title">Contact us</div>
-                    <div class="content">Send us email at <a href="mailto:contact@hn.tn">contact@hn.tn</a></div>
                 </div>
             </article>
             <aside>
