added home link

--- a/html/login.html
+++ b/html/login.html
@@ -16,6 +16,7 @@
         <nav>
             <h1>Welcome to Hassine & Noomen e-Café Shop</h1>
             <ul>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="../index.html#about">About us</a></li>
                 <li><a href="../index.html#products">Our products</a></li>
                 <li><a href="../index.html#contact">Contact us</a></li>
