--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <h1>Welcome to Hassine & Noomen e-Café Shop</h1>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About us</a></li>
                 <li><a href="#products">Our products</a></li>
                 <li><a href="#contact">Contact us</a></li>
